# laika

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/src/: App.css  App.js  Board.js  Square.js  Status.js  index.css
