[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }



